    numbers: -dates_dm when day before month and -dates_md when month
    before day.
  - [Mar 16, 99] Did not work for gedcom files with white spaces in the
    beginning of the lines. Fixed.
  - [Mar 11, 99] Fixed horrible bug: treatment of accents worked bad for
    gedcom files with ascii charset (resulting problems in "a" umlaut, for
    example).

* Lexicon (lexicon.txt) and Welcome files (xx/start.txt)
  - [Mar 10, 99] Some changes in Italian version (by Raffaele Sena).

* Documentation
  - [Mar 24, 99] Deleted all background colors.
  - [Mar 18, 99] Swedish version updated (Lars Gustavsson).
  - [Mar 17, 99] Changed documentation for the new feature "automatic choice"
    for the "death state" (see above), file "update.htm", section 5.4 "modify
    a person", paragraph "Death".

* Internal
  - [Mar 24, 99] (working Unix only) Added options "-setuid" and "-setgid"
    to "gwd" to change the user or group id after socket bind. This allows
    for example to use the port 80 (root needed) but accessing data as
    normal user.

GeneWeb Version 2.00
--------------------

From the version 2.00, the license is GPL (GNU General Public
License). The previous license still applies up to the version 1.11
included.

* GeneWeb daemon/CGI (gwd)
  - [Mar 7, 99] Added ability to enter directly birth dates for children
    in families forms.
  - [Feb 27, 99] Added case "half-siblings" in relationship links.
  - [Feb 27, 99] In personal pages, titles dates when complete are
    displayed completely (not just date).
  - [Feb 26, 99] For a birth the present day, does not display "happy
    birthday" any more! And displayed age is "birth" and not "less than
    one year".
  - [Feb 26, 99] Displaying of first name alias in personal pages does
    not include the surname any more.
  - [Feb 23, 99] In non leap years, birthday anniversaries of February 29
    are counted and celebrated March 1.
  - [Feb 19, 99] Replacement of "%s" by the name of the base with context,