@@ -1,4 +1,4 @@
-(* $Id: consang.mli,v 2.1 1999-03-08 11:18:30 ddr Exp $ *)
+(* $Id: consang.mli,v 2.2 1999-03-26 05:48:02 ddr Exp $ *)
 (* Copyright (c) 1999 INRIA *)
 
 open Def;
@@ -23,4 +23,4 @@ value make_relationship_table : base -> array int -> relationship_table;
 value relationship_and_links :
   base -> relationship_table -> bool -> iper -> iper -> (float * list int);
 
-value compute_all_consang : base -> bool -> unit;
+value compute_all_consang : base -> bool -> bool -> unit;
